<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/margin10dp"
        android:layout_marginTop="@dimen/margin10dp"
        android:textSize="@dimen/tam30sp"/>

    <Button
        android:id="@+id/btnValidarCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validarCPF"
        android:layout_marginTop="@dimen/margin30dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnValidarCNPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validarCNPJ"
        android:layout_marginTop="@dimen/margin30dp"
        android:textStyle="bold"/>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin30dp"
        android:gravity="bottom|center_horizontal"
        android:src="@drawable/logo_utfpr" />

</LinearLayout>